[Mac] WTFThreadData should use _pthread_getspecific_direct(). <https://webkit.org/b/130320>

Hack WTFThreadData to use a direct key for TLS access when available.
This mechanism uses a dedicated segment register and is the same way
we implement the fast path in FastMalloc.

Reviewed by Darin Adler.

* wtf/FastMalloc.cpp:
* wtf/WTFThreadData.cpp:
(WTF::WTFThreadData::createAndRegisterForGetspecificDirect):
* wtf/WTFThreadData.h:
(WTF::wtfThreadData):


Canonical link: https://commits.webkit.org/148308@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165725 268f45cc-cd09-0410-ab3c-d52691b4dbfc